testsuite/tests/indexed-types/should_compile/T13092b/T13092b_1.hs
{-# LANGUAGE TypeFamilies, DeriveGeneric #-}

module T13092b_1 where

import GHC.Generics

data X = X deriving (Generic)
