testsuite/tests/indexed-types/should_fail/T13092/B.hs
{-# LANGUAGE TypeFamilies #-}
module B (A, X) where
import A
data X
type instance A (X, b) = ()
